# elecrow-esp32-s3-5.0inch-lvgl

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  uart.json
components/Arduino_GFX-master/: library.properties
components/Arduino_GFX-master/examples/Clock/: Clock.ino
components/Arduino_GFX-master/examples/PDQgraphicstest/: PDQgraphicstest.ino
components/Arduino_GFX-master/src/display/: Arduino_RPi_DPI_RGBPanel.cpp
components/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_1086482287.c  ui_img_1415402543.c  ui_img_1614482188.c  ui_img_1797835574.c  ui_img_410158353.c  ui_img_626270897.c  ui_img_626276270.c  ui_img_bar_800_01_png.c  ui_img_bar_800_02_png.c  ui_img_wizee_logo_03_160x40_png.c
components/UI/components/: ui_comp_hook.c
components/UI/fonts/: ui_font_Big.c  ui_font_Iltatic_style.c  ui_font_Medium.c  ui_font_Number.c  ui_font_Small.c  ui_font_batteryv.c  ui_font_percentagekm.c
components/UI/images/: ui_img_icn_charge_png.c  ui_img_icn_flash_png.c  ui_img_menu_line_png.c  ui_img_slider_battery_png.c  ui_img_speed_slider_png.c
components/UI/screens/: ui_Screen1.c
components/arduino-esp32-master/: CMakeLists.txt
components/arduino-esp32-master/cores/esp32/: esp32-hal.h
components/gt911-arduino-main/: CMakeLists.txt  TAMC_GT911.cpp
components/lvgl-3/: lv_conf.h
main/: CMakeLists.txt  WZ8048C050.cpp  touch.h
