
idf_component_register(SRCS "ui.c"
                            "ui_helpers.c"
                            "ui_img_800x480_c050_02_png.c"
                            "ui_img_410158353.c"
                            "ui_img_626270897.c"
                            "ui_img_626276270.c"
                            "ui_img_1086482287.c"
                            "ui_img_1415402543.c"
                            "ui_img_1614482188.c"
                            "ui_img_1797835574.c"
                            "ui_img_bar_800_01_png.c"
                            "ui_img_bar_800_02_png.c"
                            "ui_img_wizee_logo_03_160x40_png.c"
                    INCLUDE_DIRS "."
                    PRIV_REQUIRES lvgl-3)